[package]
name = "node-watcher"
authors = ["Alexander Poole <alexander@poole.solutions>"]
version ="2.0.0"
edition = "2018"
description = "A CLI for watching ETH nodes and pubsubing when events happen."
readme = "README.md"
repository = "https://github.com/freq-data/node-watcher"
license = "GPL-3.0"
keywords = ["eth", "node", "pubsub"]
categories = ["command-line-utilities"]

[dev-dependencies]
testcontainers = "0.12.0"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10", features = ["blocking"] }
json = "0.12"
